tests/fixtures/invalid/bad-cli-application-config.yini

^ CLI
command = "deploy"
dry_run = false
verbosity = 2QQQ            // ERROR: Invalid number '2QQ'
include_paths = ["src/", "lib/", "config/"]
--exclude_patterns: "*.test.ts", "*.spec.js"
timeout = 60

	; Output settings.
	^^ Output
	format = "json"
	color = yes
	log_level = "debug"

// NOTE: No newline at end of file!